@@ -1,24 +1,34 @@
 # https://github.com/rust-lang-nursery/rustfmt/blob/master/Configurations.md
-indent_style = "Block"
-
-# issue 3343
-# inline_attribute_width = 80
-
+fn_args_layout = "Tall"
+force_explicit_abi = true
+hard_tabs = false
+match_arm_leading_pipes = "Never"
 max_width = 80
-tab_spaces = 4
-
-binop_separator = "Back"
-
-where_single_line = true
-format_strings = true
-
-match_block_trailing_comma = true
-force_multiline_blocks = true
-
-normalize_comments = true
-wrap_comments = true
-
-use_field_init_shorthand = true
-
+merge_derives = true
+newline_style = "Unix"
+remove_nested_parens = true
 reorder_imports = false
 reorder_modules = false
+tab_spaces = 4
+use_field_init_shorthand = true
+use_small_heuristics = "Default"
+use_try_shorthand = false
+
+# issue #3346
+# indent_style = "Block"
+# issue #3343
+# inline_attribute_width = 80
+# issue #3368
+# binop_separator = "Back"
+# issue #3359
+# where_single_line = true
+# issue  #3353
+# format_strings = true
+# issue #3380
+# match_block_trailing_comma = true
+# issue #3374
+# force_multiline_blocks = true
+# issue #3350
+# normalize_comments = true
+# issue #3347
+# wrap_comments = true
